--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "RKOrtega",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1"
   }
